# bita

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  TODO.md  build.rs
.github/workflows/: bita-ci.yml  bitar-ci.yml  cd.yml  rust.yml
bita/: Cargo.toml
bita/src/: compress_cmd.rs  info_cmd.rs  main.rs
bitar/: Cargo.toml  README.md  build.rs
bitar/examples/: in-place-cloner.rs  local-cloner.rs
bitar/examples/resources/: example-archive.cba  example.seed
bitar/proto/: chunk_dictionary.proto
bitar/src/: archive.rs  archive_reader.rs  chunk.rs  chunk_dictionary.rs  chunk_index.rs  chunk_location.rs  chunk_location_map.rs  chunk_offset.rs  chunker.rs  clone.rs  clone_output.rs  compression.rs  error.rs  hashsum.rs  header.rs  http_range_request.rs  lib.rs  output.rs  reader.rs  reader_backend.rs  reader_io.rs  reader_remote.rs  rolling_hash.rs  seed.rs
bitar/src/api/: compress.rs  mod.rs
bitar/src/archive_reader/: http_range_request.rs  http_reader.rs  io_reader.rs  mod.rs
bitar/src/chunker/: config.rs  fixed_size.rs  mod.rs  rolling_hash.rs  streaming_chunker.rs
bitar/src/clone/: from_archive.rs  from_readable.rs  in_place.rs  mod.rs  output.rs
bitar/src/rolling_hash/: buzhash.rs  mod.rs  rollsum.rs
bitar/tests/: chunking.rs  clone_archives_default.rs  clone_archives_lzma.rs  clone_archives_zstd.rs  common.rs  compress_archives_default.rs  compress_archives_lzma.rs  compress_archives_zstd.rs
bitar/tests/golden/: buzhash_random_1024_500_6000_10.sums  buzhash_random_256_10_512_16.sums  buzhash_random_512_20_1200_20.sums  buzhash_zero_1024_500_6000_10.sums  fixed_random_128.sums  fixed_random_2048.sums  fixed_random_300.sums  fixed_zero_128.sums  fixed_zero_2048.sums  fixed_zero_300.sums  rollsum_random_1024_500_6000_10.sums  rollsum_random_256_10_512_16.sums  rollsum_random_512_20_1200_20.sums  rollsum_zero_256_10_512_16.sums  rollsum_zero_512_20_1200_20.sums
bitar/tests/resources/: rand-0_11_0-brotli-trunc.cba  rand-0_1_1-none.cba  rand-0_7_1-corrupt-chunk.cba  rand-0_7_1-corrupt-header.cba  random.img  zero-0_1_1-lzma.cba  zero-0_1_1-zstd.cba  zero-0_7_1-brotli.cba
proto/: archive_header.proto  chunk_dictionary.proto
scripts/: build_and_test.sh  test-no-ssl-build.sh
src/: archive.rs  archive_header.rs  archive_reader.rs  archive_reader2.rs  buzhash.rs  buzhash2.rs  chunk_dictionary.rs  chunk_index.rs  chunker.rs  chunker2.rs  chunker_utils.rs  cli.rs  clone_cmd.rs  clone_output.rs  compress_cmd.rs  compression.rs  config.rs  diff_cmd.rs  error.rs  errors.rs  file_archive_backend.rs  file_format.rs  hashsum.rs  http_range_request.rs  info_cmd.rs  lib.rs  main.rs  ordered_mpsc.rs  output.rs  para_pipe.rs  reader_backend.rs  remote_archive_backend.rs  remote_reader.rs  rolling_hash.rs  rolling_hasher.rs  rollsum.rs  seed_input.rs  string_utils.rs  unpack_cmd.rs  utils.rs
