[package]
name = "bitar"
version = "0.11.0"
authors = ["Olle Sandberg <olle@b3rg.se>"]
license = "MIT"
edition = '2021'
description = "bita archive utilities"
repository = "https://github.com/oll3/bita"
readme = "README.md"
keywords = ["sofware-update", "file-synchronization", "delta-update",  "differential"]
categories = ["compression", "filesystem"]
rust-version = "1.61"

[build-dependencies]
prost-build = "0.11"

[dependencies]
blake2 = "0.10"
prost = "0.11"
log = "0.4"
brotli-decompressor = "2.3"
brotli = { version = "3.3", default-features = false, features = ["std", "disable-timer"], optional = true }
futures-util = { version = "0.3", default-features = false }
tokio = "1"
bytes = "1.1"
rust-lzma = { version = "0.5", optional = true }
zstd = { version = "0.12", optional = true }
async-trait = "0.1"
tempfile = { version="3.2", optional = true }
num_cpus = { version="1.13", optional = true }

[dev-dependencies]
hyper = { version = "0.14", features = ["server"] }
rand = { version = "0.8", features = ["std"] }
tempfile = "3.2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }



[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["stream"]

[features]
default-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]
lzma-compression = ["rust-lzma"]
zstd-compression = ["zstd"]
compress = ["brotli", "tempfile", "num_cpus", "futures-util/std"]
